--- a/OfflineMapBook/OfflineMapBook/Views/MapView.xaml
+++ b/OfflineMapBook/OfflineMapBook/Views/MapView.xaml
@@ -40,17 +40,7 @@
             
             <!-- Map Title -->
             <TextBlock Text="{Binding Map.Item.Title}" VerticalAlignment="Center" Style="{StaticResource WhiteText}" FontSize="30" Grid.Column="1"/>
-            <CheckBox IsChecked="True">
-                <!--<CheckBox.Resources>
-                    <Style TargetType="CheckBox">
-                        <Setter Property="Background" Value="Red"/>
-                        <Setter Property="Foreground" Value="Pink"/>
-                        <Setter Property="BorderBrush" Value="Yellow"/>
-                        <Setter Property="BorderThickness" Value="5"/>
-                    </Style>
-                </CheckBox.Resources>-->
-            </CheckBox>
-            
+           
             <!-- Bookmarks Button -->
             <ToggleButton Style="{StaticResource FlatToggleButton}" x:Name="toggleBookmarks"  Grid.Column="2">
                 <TextBlock Text="&#xE8A4;" Style="{StaticResource SymbolButton}"/>
@@ -294,25 +284,71 @@
             <Border BorderBrush="White" BorderThickness="0,1,0,0" >
                 <Grid>
                     <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="120"/>
                         <ColumnDefinition Width="3*"/>
                         <ColumnDefinition Width="3*"/>
                         <ColumnDefinition Width="3*"/>
                     </Grid.ColumnDefinitions>
-                    <Button Style="{StaticResource FlatButton}" Width="100" Height="40" Grid.Column="0" 
+                    <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="5,0,0,0">
+                        <TextBlock Text="{Binding ActiveIdentifiedFeatureIndex}" Style="{StaticResource WhiteText}" VerticalAlignment="Center" FontSize="15"
+                                   Visibility="{Binding IdentifyModelsList.Count, Converter={StaticResource CountToVisibilityConverter}, ConverterParameter=chevron}"/>
+                        <TextBlock Text=" of " Style="{StaticResource WhiteText}" VerticalAlignment="Center" FontSize="15"
+                                   Visibility="{Binding IdentifyModelsList.Count, Converter={StaticResource CountToVisibilityConverter}, ConverterParameter=chevron}"/>
+                        <TextBlock Text="{Binding IdentifyModelsList.Count}" Style="{StaticResource WhiteText}" VerticalAlignment="Center" FontSize="15"
+                                   Visibility="{Binding IdentifyModelsList.Count, Converter={StaticResource CountToVisibilityConverter}, ConverterParameter=chevron}"/>
+                    </StackPanel>
+                    <Button Style="{StaticResource FlatButton}" Width="60" Height="40" Grid.Column="1" Command="{Binding MovePrevious}"
                             Visibility="{Binding IdentifyModelsList.Count, Converter={StaticResource CountToVisibilityConverter}, ConverterParameter=chevron}">
                         <TextBlock Text="&#xE0E2;" FontFamily="Segoe MDL2 Assets" FontSize="20"/>
                     </Button>
-                    <Button Style="{StaticResource FlatButton}" Width="100" Height="40" Grid.Column="1"
+                    <Button Style="{StaticResource FlatButton}" Width="60" Height="40" Grid.Column="2" Command="{Binding MoveNext}"
                             Visibility="{Binding IdentifyModelsList.Count, Converter={StaticResource CountToVisibilityConverter}, ConverterParameter=chevron}">
                         <TextBlock Text="&#xE0E3;" FontFamily="Segoe MDL2 Assets" FontSize="20"/>
                     </Button>
                     <!-- Close button -->
-                    <Button Style="{StaticResource FlatButton}" Width="100" Height="40" Grid.Column="2" Command="{Binding CloseIdentifyCommand}">
+                    <Button Style="{StaticResource FlatButton}" Width="60" Height="40" Grid.Column="3" Command="{Binding CloseIdentifyCommand}">
                         <TextBlock Text="&#xE894;" FontFamily="Segoe MDL2 Assets" FontSize="20"/>
                     </Button>
                 </Grid>
             </Border>
-            <ItemsControl x:Name="virtualItemsControl" ItemsSource="{Binding IdentifyModelsList}" Background="#3F51B5" >
+            <StackPanel Orientation="Vertical">
+                <Border BorderBrush="White" BorderThickness="0,1,0,0">
+                    <TextBlock Text="{Binding ActiveIdentifiedFeature.LayerName}" Style="{StaticResource WhiteText}" 
+                                           FontSize="20" FontWeight="SemiBold" Margin="5,10,5,10" TextWrapping="Wrap"/>
+                </Border>
+                <ListView ItemsSource="{Binding ActiveIdentifiedFeature.IdentifiedGeoElement.Attributes}" Background="Transparent"
+                          ScrollViewer.HorizontalScrollBarVisibility="Disabled" Padding="3">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="150"/>
+                                    <ColumnDefinition Width="150"/>
+                                </Grid.ColumnDefinitions>
+                                <Border BorderBrush="White" BorderThickness="0,0,1,0">
+                                    <TextBlock Text="{Binding Key}" Grid.Column="0" Style="{StaticResource WhiteText}" 
+                                                           FontSize="15" FontWeight="SemiBold" Margin="0,5,0,0"/>
+                                </Border>
+                                <TextBlock Text="{Binding Value}" Grid.Column="1" Style="{StaticResource WhiteText}" 
+                                                       FontSize="15" FontWeight="Thin" TextWrapping="Wrap" Margin="5,5,0,0"/>
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="{x:Type ListViewItem}">
+                            <Setter Property="Background" Value="Transparent" />
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type ListViewItem}">
+                                        <ContentPresenter />
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </ListView.ItemContainerStyle>
+                </ListView>
+            </StackPanel>
+            <!--<ItemsControl x:Name="virtualItemsControl" ItemsSource="{Binding IdentifyModelsList}" Background="#3F51B5" >
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
                         <StackPanel Orientation="Horizontal"/>
@@ -358,7 +394,7 @@
                         </StackPanel>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
-            </ItemsControl>
+            </ItemsControl>-->
         </StackPanel>
     </Grid>
 </UserControl>
