--- a/OfflineMapBook/OfflineMapBook/Views/MapView.xaml
+++ b/OfflineMapBook/OfflineMapBook/Views/MapView.xaml
@@ -129,6 +129,7 @@
             <esriUI:TableOfContents GeoView="{Binding ElementName=MapBookMapView}" ShowLegend="True"  
                                     Visibility="{Binding IsChecked, ElementName=toggleLegend, Converter={StaticResource BooleanToVisibilityConverter}}"
                                     Width="300" Style="{StaticResource TOC}">
+                <!-- Explicit styling of the checkbox required due to toolkit code overwriting any implicit styling  -->
                 <esriUI:TableOfContents.LayerItemTemplate>
                     <HierarchicalDataTemplate ItemsSource="{Binding Sublayers}">
                         <Grid Margin="0,2">
@@ -289,6 +290,7 @@
                         <ColumnDefinition Width="3*"/>
                         <ColumnDefinition Width="3*"/>
                     </Grid.ColumnDefinitions>
+                    <!-- Area showing number of features identified -->
                     <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="5,0,0,0">
                         <TextBlock Text="{Binding ActiveIdentifiedFeatureIndex}" Style="{StaticResource WhiteText}" VerticalAlignment="Center" FontSize="15"
                                    Visibility="{Binding IdentifyModelsList.Count, Converter={StaticResource CountToVisibilityConverter}, ConverterParameter=chevron}"/>
@@ -297,10 +299,12 @@
                         <TextBlock Text="{Binding IdentifyModelsList.Count}" Style="{StaticResource WhiteText}" VerticalAlignment="Center" FontSize="15"
                                    Visibility="{Binding IdentifyModelsList.Count, Converter={StaticResource CountToVisibilityConverter}, ConverterParameter=chevron}"/>
                     </StackPanel>
+                    <!-- Move to previous feature button -->
                     <Button Style="{StaticResource FlatButton}" Width="60" Height="40" Grid.Column="1" Command="{Binding MovePrevious}"
                             Visibility="{Binding IdentifyModelsList.Count, Converter={StaticResource CountToVisibilityConverter}, ConverterParameter=chevron}">
                         <TextBlock Text="&#xE0E2;" FontFamily="Segoe MDL2 Assets" FontSize="20"/>
                     </Button>
+                    <!-- Move to next feature button -->
                     <Button Style="{StaticResource FlatButton}" Width="60" Height="40" Grid.Column="2" Command="{Binding MoveNext}"
                             Visibility="{Binding IdentifyModelsList.Count, Converter={StaticResource CountToVisibilityConverter}, ConverterParameter=chevron}">
                         <TextBlock Text="&#xE0E3;" FontFamily="Segoe MDL2 Assets" FontSize="20"/>
@@ -311,6 +315,7 @@
                     </Button>
                 </Grid>
             </Border>
+            <!-- Area containing layer name and attributes -->
             <StackPanel Orientation="Vertical">
                 <Border BorderBrush="White" BorderThickness="0,1,0,0">
                     <TextBlock Text="{Binding ActiveIdentifiedFeature.LayerName}" Style="{StaticResource WhiteText}" 
@@ -348,53 +353,6 @@
                     </ListView.ItemContainerStyle>
                 </ListView>
             </StackPanel>
-            <!--<ItemsControl x:Name="virtualItemsControl" ItemsSource="{Binding IdentifyModelsList}" Background="#3F51B5" >
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <StackPanel Orientation="Horizontal"/>
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel Orientation="Vertical">
-                            <Border BorderBrush="White" BorderThickness="0,1,0,0">
-                                <TextBlock Text="{Binding LayerName}" Style="{StaticResource WhiteText}" 
-                                           FontSize="20" FontWeight="SemiBold" Margin="5,10,5,10" TextWrapping="Wrap"/>
-                            </Border>
-                            <ListView ItemsSource="{Binding Attributes}" Background="Transparent" Padding="5">
-                                <ListView.ItemTemplate>
-                                    <DataTemplate>
-                                        <Grid>
-                                            <Grid.ColumnDefinitions>
-                                                <ColumnDefinition Width="150"/>
-                                                <ColumnDefinition Width="150"/>
-                                            </Grid.ColumnDefinitions>
-                                            <Border BorderBrush="White" BorderThickness="0,0,1,0">
-                                                <TextBlock Text="{Binding Key}" Grid.Column="0" Style="{StaticResource WhiteText}" 
-                                                           FontSize="15" FontWeight="SemiBold" Margin="0,5,0,0"/>
-                                            </Border>
-                                            <TextBlock Text="{Binding Value}" Grid.Column="1" Style="{StaticResource WhiteText}" 
-                                                       FontSize="15" FontWeight="Thin" TextWrapping="Wrap" Margin="5,5,0,0"/>
-                                        </Grid>
-                                    </DataTemplate>
-                                </ListView.ItemTemplate>
-                                <ListView.ItemContainerStyle>
-                                    <Style TargetType="{x:Type ListViewItem}">
-                                        <Setter Property="Background" Value="Transparent" />
-                                        <Setter Property="Template">
-                                            <Setter.Value>
-                                                <ControlTemplate TargetType="{x:Type ListViewItem}">
-                                                    <ContentPresenter />
-                                                </ControlTemplate>
-                                            </Setter.Value>
-                                        </Setter>
-                                    </Style>
-                                </ListView.ItemContainerStyle>
-                            </ListView>
-                        </StackPanel>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>-->
         </StackPanel>
     </Grid>
 </UserControl>
